# multicorn2

./: .gitignore  CHANGELOG  LICENSE  META.json  Makefile  README.md  docheck  flake.nix  multicorn.control  multicorn2.control  pyproject.toml  setup.py  test-3.11  test-3.8
.github/workflows/: run_tests.yml  update_cache.yml
doc/: README.md  api.md  contribute.md  contribute.rst  foreign-data-wrappers.md  getting-started.md  getting-started.rst  implementing-an-fdw.md  implementing-tutorial.md  index.rst  installation.md  installation.rst  internals.md  multicorn.md  third-party-fdw.md
docker/py3-12/: Dockerfile
docker/py39-pg13/: Dockerfile
multicorn/: .gitignore  LICENSE  META.json  Makefile
multicorn/src/: multicorn.c  multicorn.h  python.c
python/multicorn/: __init__.py  ldapfdw.py  sqlalchemyfdw.py  testfdw.py  utils.py
sql/: multicorn--2.1.sql
src/: errors.c  multicorn.c  multicorn.h  multicorn2.c  multicorn2.h  python.c  query.c  utils.c
test-3.6/: test-3.7
test-3.9/expected/: multicorn_alchemy_test.out  multicorn_planner_test.out  multicorn_planner_test_1.out  multicorn_planner_test_2.out  multicorn_regression_test.out  multicorn_test_limit.out  multicorn_test_limit_1.out  multicorn_test_limit_2.out  write_batch_test.out  write_savepoints_1.out  write_test_1.out  write_test_2.out  write_test_3.out  write_test_5.out  write_test_6.out  write_test_7.out
test-3.9/sql/: multicorn_planner_test.sql  multicorn_regression_test.sql  multicorn_test_limit.sql  write_batch_test.sql
test-common/: multicorn_testfilesystem.include
(+1 files in other folders)
